Bug 424647 - Scaling vector selection via Select menu results in selection being offsetted to different place.
Summary: Scaling vector selection via Select menu results in selection being offsetted...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-25 12:58 UTC by Raghavendra kamath
Modified: 2021-05-18 13:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2020-07-25 12:58:05 UTC
SUMMARY
Scaling selection via the select menu (select > scale) change the co-ordinates of the selection to be somewhere else (mostly top right). And subsequent new selection will also appear in odd places.

STEPS TO REPRODUCE
1. Open a krita document and make a small selection (rectangular)
2. Go to select menu then click on scale. 
3. Enter larger dimension to scale up the selection and check the resulting selection

OBSERVED RESULT
Selection is displaced somewhere else

EXPECTED RESULT
Selection should be resized in place possible with pivot at center
Comment 1 Halla Rempt 2020-07-25 13:00:20 UTC
Do you knopw whether this is a regression?
Comment 2 Raghavendra kamath 2020-07-25 13:07:41 UTC
I'll check older appimages. I never used this option to scale selection so i don't know if this is an old bug. I'll check older appimages and comment here
Comment 3 Raghavendra kamath 2020-07-25 13:14:20 UTC
Sorry for double comment.

This happens in 4.1 appimage too so I think this is not a regression but an older bug which went un-noticed
Comment 4 vanyossi 2020-07-27 02:50:17 UTC
Only vector selection has this issue
Comment 5 sh_zam 2021-05-18 13:21:55 UTC
Git commit 29628ca896318401ee9d919548c4b497db79047a by Sharaf Zaman.
Committed on 18/05/2021 at 13:04.
Pushed by szaman into branch 'master'.

Bugfix: Scale operation on vector selections

M  +3    -1    libs/ui/flake/kis_shape_selection.cpp

https://invent.kde.org/graphics/krita/commit/29628ca896318401ee9d919548c4b497db79047a