Bugfix: Scale operation on vector selections

BUG:424647